--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,6 +14,6 @@ jobs:
       with:
         dotnet-version: '3.1.100'
       env:
-       NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}  
+       NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}  
     - name: Build with dotnet
       run: dotnet run --project build/_build.csproj
