--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      run: git fetch --unshallow
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
