--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,5 +1,6 @@
 assembly-versioning-scheme: MajorMinorPatch
 assembly-file-versioning-scheme: MajorMinorPatch
+commit-message-incrementing: Enabled
 
 branches:
   master:
