--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -2,7 +2,7 @@ major-version-bump-message: '\+semver:\s?(breaking|major)'
 minor-version-bump-message: '\+semver:\s?(feature|minor)'
 patch-version-bump-message: '\+semver:\s?(fix|patch)'
 commit-message-incrementing: Enabled
-
+next-version: 0.2.1
 branches:
   master:
     regex: (origin/)?master
