--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -5,6 +5,8 @@ commit-message-incrementing: Enabled
 next-version: 0.2.1
 branches:
   master:
+    regex: ^master
+    mode: ContinuousDelivery
     increment: Patch
     prevent-increment-of-merged-branch-version: false
     track-merge-target: false
