finally got it somewhat working

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,6 +1,8 @@
 assembly-versioning-scheme: MajorMinorPatch
 assembly-file-versioning-scheme: MajorMinorPatch
-
+mode: Mainline
+ignore:
+  commits-before: 2020-01-01T11:43:45
 branches:
   master:
     regex: (origin/)?master
