changed namespace to Tieno.MyPonto.Client

--- a/MyPonto.Client/MyPonto.Client.csproj
+++ b/MyPonto.Client/MyPonto.Client.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Tieno.MyPonto.Client</AssemblyName>
+    <RootNamespace>Tieno.MyPonto.Client</RootNamespace>
+    <ApplicationIcon />
   </PropertyGroup>
 
   <ItemGroup>
